# ClaudeWeb

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
Docs/: AgentNest仕様.md  ClaudeWeb仕様.md  Gitタブ仕様.md  Tauri移行計画.md  web画面.md  ガイド-テスト.md  ガイド-運用.md  テストのガイド.md  ユニバーサルバイナリ.md  仕様-AgentNest全体.md  仕様-Gitタブ.md  実装計画.md  設計-URL.md  設計-画面.md
Docs/アーカイブ/: 実装方針-Gitタブ.md  実装方針-URL.md
docs/: ガイド-HTTPS化.md  ガイド-ユニバーサルバイナリ.md  仕様-AgentNest全体.md  設計-URL.md
docs/アーカイブ/: Tauri移行計画.md
electron/: app.html  config-store.ts  main.ts  preload.ts  server-manager.ts  tray.ts  tsconfig.json  updater.ts
electron/icons/: AgentNest.ai
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  index.css  main.tsx  router.tsx  theme.ts
scripts/: build-server.mjs  generate-icons.sh  release.sh
server/: config.ts  index.ts  tsconfig.json
server/claude/: commandExpander.ts  executor.ts
server/routes/: chat.ts  files.ts  git.ts  permission.ts  reconnect.ts  repos.ts  sessions.ts  (+1 more)
src-panel/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  server.rs  tray.rs
tests/: auto-scroll.spec.ts  chat.spec.ts  file-browser.spec.ts  follow-up.spec.ts  ios-input.spec.ts  regression-loading.spec.ts  screenshots.spec.ts  server-process-cleanup.spec.ts  server-sse-error.check.ts  sessions.spec.ts
(+30 files in other folders)
