[package]
name = "agent-nest"
version = "0.0.0"
edition = "2021"

[lib]
name = "agent_nest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agent-nest"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "process", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
